# crusade

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  objects.inv  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: build.yml
api/: index.html
api/conversion_methods/: index.html
api/utils/: index.html
docs-site/: mkdocs.yml
docs-site/docs/: index.md
docs-site/docs/api/: conversion_methods.md  index.md  utils.md
scripts/: encoders_batch.sh  encoders_study.py  multidim_adm.py  test.py
scripts/testbenches/: filterbank_ADM_tb.ipynb  resonate_and_fire_bank_tb.ipynb
search/: search_index.json
src/crusade/: conversion_methods.py  utils.py
src/crusafe/: conversion_methods.py  utils.py
tests/: test_filterbank_adm.py  test_freq.py
